@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: term.c,v 1.185 2009/06/04 03:19:09 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: term.c,v 1.186 2009/06/17 04:15:35 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - term.c */
@@ -1926,6 +1926,11 @@ test_term()
     char label[MAX_ID_LEN];
     int key_entry_height;
     int p_width;
+    TBOOLEAN already_in_enhanced_text_mode;
+
+    already_in_enhanced_text_mode = t->flags & TERM_ENHANCED_TEXT;
+    if (!already_in_enhanced_text_mode)
+	do_string("set termopt enh",FALSE);
 
     term_start_plot();
     screen_ok = FALSE;
@@ -1950,8 +1955,18 @@ test_term()
     (*t->vector) (0, ymax_t - 1);
     (*t->vector) (0, 0);
     (*t->linetype)(0);
-    (void) (*t->justify_text) (LEFT);
-    (*t->put_text) (t->h_char * 5, ymax_t - t->v_char * 1.5, "Terminal Test");
+
+    /* Echo back the current terminal type */
+    if (!strcmp(term->name,"unknown"))
+	int_error(NO_CARET, "terminal type is unknown");
+    else {
+	char tbuf[64];
+	strcpy(tbuf,term->name);
+	strcat(tbuf,"  terminal test");
+	(void) (*t->justify_text) (LEFT);
+	(*t->put_text) (t->h_char * 2, ymax_t - t->v_char * 0.5, tbuf);
+    }
+
 #ifdef USE_MOUSE
     if (t->set_ruler) {
 	(*t->put_text) (t->h_char * 5, ymax_t - t->v_char * 3, "Mouse and hotkeys are supported, hit: h r m 6");
@@ -1975,6 +1990,16 @@ test_term()
     (*t->put_text) (xmax_t / 2 - t->h_char * 10, ymax_t / 2 + t->v_char * 1.4,
 		    "test of character width:");
     (*t->linetype) (LT_BLACK);
+
+    /* Test for enhanced text */
+    if (t->flags & TERM_ENHANCED_TEXT) {
+	char *tmptext = gp_strdup("Enhanced text:   {x@_{0}^{n+1}}");
+	(*t->put_text) (xmax_t * 0.5, ymax_t * 0.40, tmptext);
+	free(tmptext);
+	if (!already_in_enhanced_text_mode)
+	    do_string("set termopt noenh",FALSE);
+    }
+
     /* test justification */
     (void) (*t->justify_text) (LEFT);
     (*t->put_text) (xmax_t / 2, ymax_t / 2 + t->v_char * 6, "left justified");
@@ -2010,13 +2035,6 @@ test_term()
 	str = " rotated by -45 deg";
 	(*t->text_angle)(-45);
 	(*t->put_text)(t->v_char * 2, ymax_t / 2, str);
-#ifdef HAVE_GD_PNG
-	if (!strcmp(t->name, "png") || !strcmp(t->name, "gif") || !strcmp(t->name, "jpeg")) {
-	    (*t->text_angle)(0);
-	    str = "this terminal supports text rotation only for truetype fonts";
-	    (*t->put_text)(t->v_char * 2 + t->h_char * 4, ymax_t / 2 - t->v_char * 2, str);
-	}
-#endif
     } else {
 	(void) (*t->justify_text) (LEFT);
 	(*t->put_text) (t->h_char * 2, ymax_t / 2 - t->v_char * 2, "can't rotate text");
@@ -2130,34 +2148,42 @@ test_term()
     }
 
     {
-	int cen_x = (int)(0.75 * xmax_t);
+	int cen_x = (int)(0.70 * xmax_t);
 	int cen_y = (int)(0.83 * ymax_t);
 	int radius = xmax_t / 20;
 
-	(*t->linetype)(2);
 	/* test pm3d -- filled_polygon(), but not set_color() */
 	if (t->filled_polygon) {
+	    int i, j;
 #define NUMBER_OF_VERTICES 6
 	    int n = NUMBER_OF_VERTICES;
 	    gpiPoint corners[NUMBER_OF_VERTICES+1];
 #undef  NUMBER_OF_VERTICES
-	    int i;
 
-	    for (i = 0; i < n; i++) {
-		corners[i].x = cen_x + radius * cos(2*M_PI*i/n);
-		corners[i].y = cen_y + radius * sin(2*M_PI*i/n);
+	    for (j=0; j<=1; j++) {
+		int ix = cen_x + j*radius;
+		int iy = cen_y - j*radius/2;
+		for (i = 0; i < n; i++) {
+		    corners[i].x = ix + radius * cos(2*M_PI*i/n);
+		    corners[i].y = iy + radius * sin(2*M_PI*i/n);
+		}
+		corners[n].x = corners[0].x;
+		corners[n].y = corners[0].y;
+		if (j == 0) {
+		    (*t->linetype)(2);
+		    corners->style = FS_OPAQUE;
+		} else {
+		    (*t->linetype)(1);
+		    corners->style = FS_TRANSPARENT_SOLID + (50<<4);
+		}
+		term->filled_polygon(n+1, corners);
 	    }
-	    corners[n].x = corners[0].x;
-	    corners[n].y = corners[0].y;
-	    corners->style = FS_OPAQUE;
-	    term->filled_polygon(n+1, corners);
-	    str = "(color) filled polygon:";
+	    str = "filled polygons:";
 	} else
-	    str = "filled polygons not supported";
+	    str = "No filled polygons";
 	(*t->linetype)(LT_BLACK);
 	i = ((*t->justify_text) (CENTRE)) ? 0 : t->h_char * strlen(str) / 2;
 	(*t->put_text) (cen_x + i, cen_y + radius + t->v_char * 0.5, str);
-	(*t->linetype)(LT_BLACK);
     }
 
     term_end_plot();
